--- a/wampspring-demo-security/src/main/resources/templates/layout.html
+++ b/wampspring-demo-security/src/main/resources/templates/layout.html
@@ -5,7 +5,7 @@
   <head>
     <title layout:title-pattern="$DECORATOR_TITLE - $CONTENT_TITLE">SecureMail</title>
     <link rel="icon" type="image/x-icon" th:href="@{/resources/img/favicon.ico}" href="../static/img/favicon.ico"/>
-    <link th:href="@{resources/js/bootstrap/css/bootstrap.min.css}" href="../static/resources/js/bootstrap/bootstrap.min.css" rel="stylesheet"></link>
+    <link th:href="@{resources/js/bootstrap/css/bootstrap.css}" href="" rel="stylesheet"></link>
     <style type="text/css">
       /* Sticky footer styles
       -------------------------------------------------- */
@@ -65,7 +65,7 @@
         margin-left: 1em;
       }
     </style>
-    <link th:href="@{resources/js/bootstrap/css/bootstrap-responsive.min.css}" href="/static/resources/js/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet"></link>
+    <link th:href="@{resources/js/bootstrap/css/bootstrap-responsive.css}" href="" rel="stylesheet"></link>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
